--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "mermaid": "^9.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -20,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sass": "node-sass -w src/style/app.sass src/style/app.css"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-jest": "^29.4.2",
     "jest": "^27.5.1",
+    "node-sass": "^7.0.3",
     "react-test-renderer": "^18.2.0"
   }
 }
